@@ -44,7 +44,6 @@ public class JMSTestRunner extends TestRunner
 	public String logLevelId = Level.INFO.toString();
 	public String testCaseId = "no test case is running";
 
-	private Factory cmdFactory;
 	private CmdListBadges badges;
 	private HashMap<String, URLClassLoader> classLoaders = new HashMap<String, URLClassLoader>();
 
@@ -80,8 +79,7 @@ public class JMSTestRunner extends TestRunner
 	public JMSTestRunner() throws IOException {
 
 		// initialize the IVCT Commander Factory
-		cmdFactory = new Factory();
-		cmdFactory.initialize();
+		Factory.initialize();
 
 		// start command listeners
 		(new CmdSetLogLevelListener(this)).execute();
@@ -142,7 +140,7 @@ public class JMSTestRunner extends TestRunner
 					URL[] urls = new URL[filesList.length];
 					for (int i = 0; i < filesList.length; i++) {
 						try {
-							urls[i] = new URL(filesList[i].toURI().toString());
+							urls[i] = filesList[i].toURI().toURL();
 						} catch (MalformedURLException e) {
 							e.printStackTrace();
 						}
